# galadriel

./: .gitattributes  .gitignore  .ncp-consumer  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.mdc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE-POLICY.md  SECURITY.md  SUPPORT.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  deep-quality.yml
.superstack/: build-context.md  galadriel-review-2026-07-10.html
.superstack/security-reports/: galadriel-2026-07-10.md  history.md
crates/galadriel-cli/: Cargo.toml
crates/galadriel-cli/src/: main.rs
crates/galadriel-cli/tests/: demo_output.rs  observe_exit.rs  replay_output.rs
crates/galadriel-cli/tests/fixtures/: replay_three_tracks.jsonl
crates/galadriel-core/: Cargo.toml  README.md
crates/galadriel-core/src/: authority.rs  baseline.rs  chi2.rs  config.rs  correlation.rs  cusum.rs  decision.rs  domain.rs  error.rs  fusion.rs  identity.rs  lib.rs  numeric.rs  observation.rs  outcome.rs  window.rs
crates/galadriel-eval/: Cargo.toml
crates/galadriel-eval/benches/: detectors.rs
crates/galadriel-eval/src/: evidence_main.rs  lib.rs  main.rs
crates/galadriel-justify/: Cargo.toml
crates/galadriel-justify/src/: lib.rs  main.rs
crates/galadriel-ncp/: Cargo.toml
crates/galadriel-ncp/schemas/: galadriel-monitor-envelope-v1.schema.json  galadriel-pid-envelope-v1.schema.json
crates/galadriel-ncp/src/: assembler.rs  config_identity.rs  lib.rs  lifecycle.rs  live.rs  monitor.rs  monitor_live.rs  operational_live.rs  registry.rs  secure_live.rs
crates/galadriel-ncp/tests/: crebain_capture.rs  live_zenoh_e2e.rs  monitor_live_zenoh_e2e.rs  operational_live_zenoh_e2e.rs  registry_golden.rs  secure_deployment_configs.rs
crates/galadriel-ncp/tests/fixtures/: crebain_clean_capture.jsonl  crebain_registry_v1.json  lifecycle-receipt-v0.9.json
crates/galadriel-pid/: Cargo.toml
crates/galadriel-pid/src/: engine.rs  fusion.rs  identity.rs  lib.rs  suite.rs
crates/galadriel-sim/: Cargo.toml
crates/galadriel-sim/src/: injection.rs  lib.rs  rng.rs  scenario.rs
deploy/: README.md  galadriel-security-profile.example.json  secure-client-endpoint-corpus.json
deploy/reference/: SHA256SUMS  galadriel-handoff.json  zenoh-observer.json5  zenoh-producer.json5  zenoh-router.json5
docs/: ADVISORY-BOUNDARY.md  API-SURFACE.md  CLAIMS.md  CONFIGURATION-CONTRACT.md  CORE-CONTRACT.md  DEPENDENCY-POLICY.md  ECOSYSTEM-CONNECTIONS.md  EVALUATION.md  JUSTIFICATION.md  MIGRATION-0.9.md  MOTIVATION.md  PAPER.md  PID_RS_1_0_MIGRATION.md  POST-AUDIT-EVIDENCE.md  PRODUCER-CONTRACT.md  RELATED-WORK.md  SECURE-DEPLOYMENT.md  STATE-MACHINE.md  STATISTICAL-CONTRACT.md  THREAT-MODEL.md
evidence/: galadriel-0.9-candidate.json  pid-rs-0.4-deterministic-control.patch  pid-rs-1.0-migration.json
evidence/results/post-audit-v1-8a0084f/: SHA256SUMS  config.json  manifest.json  report.md  summary.json  trials.jsonl
fuzz/: Cargo.toml  README.md  deny.toml
fuzz/fuzz_targets/: detector_boundaries.rs  ncp_decode.rs
release/0.9.0/: README.md  RELEASE-NOTES.md  RELEASE-RUNBOOK.md  VERSION-ADAPTATION.md  WITHDRAWN-RELEASES.md  audit-inputs.json  audit-manifest.json  claims.json  ecosystem-cut.json  handoff-source.json  local-convergence-schema.json  requirements-ledger.json  task-closure-plan.json  task-dispositions.json  tasks.json
release/0.9.0/api/: galadriel-core.0.9.0.txt  galadriel-core.baseline.txt  galadriel-pid.0.9.0.txt
release/0.9.0/audit/: FROZEN-AUDIT-INPUTS-0.9.0.json  FROZEN-AUDIT-INPUTS-0.9.0.json.sig  FROZEN-AUDIT-INPUTS.json  FROZEN-AUDIT-INPUTS.json.sig  threat-register.json
release/0.9.0/evidence/: ACCEPTANCE-CRITERIA.md  galadriel-core-api.diff
release/0.9.0/evidence/baseline-94e2f8cc/: baseline.json  cargo-metadata.json
release/0.9.0/handoff/: GALADRIEL_V1_0_AGENT_TASK_LEDGER.yaml  GALADRIEL_V1_0_ARCHITECTURE.md  GALADRIEL_V1_0_ARTIFACT_SHA256SUMS.txt  GALADRIEL_V1_0_ARTIFACT_VALIDATION_REPORT.md  GALADRIEL_V1_0_CORE_CONTRACT_SCHEMA.json  GALADRIEL_V1_0_GO_NO_GO_CHECKLIST.md  GALADRIEL_V1_0_MIGRATION_AND_ECOSYSTEM.md  GALADRIEL_V1_0_RELEASE_BLUEPRINT.md  GALADRIEL_V1_0_RELEASE_MANIFEST_TEMPLATE.json  PACKAGE_INDEX.md  tasks.json
release/0.9.0/reviews/: REVIEW-COMMENTS.md  REVIEW-METHOD.md  phase-1.md
repo_work/: README.md  audit_tracked_files.py  build_task_dispositions.py  check_feature_graph.py  check_focused_mutation.py  check_frozen_head.py  check_public_api.py  check_vulnerable_features.py  common.py  finalize_release.py  freeze_audit_inputs.py  local_convergence.py  make_review_packets.py  package_release_assets.py  prepare_mutation_evidence.py  qualification_artifacts.py  qualify_candidate.py  release_assurance.py  reproduce_baseline.py  run_broad_mutation.py  scan_claim_language.py  verify_evidence_manifest.py
repo_work/tests/: test_finalize_qualification.py  test_host_process_bounds.py  test_package_release_assets.py  test_qualification_artifacts.py  test_release_assurance.py  test_review_tools.py  test_task_dispositions.py
scripts/: release_audit.py  secure_deployment.py
scripts/tests/: test_release_audit.py
