# galadriel — Galadriel's Mirror
# A fail-closed cross-sensor statistical-consistency monitor for
# multi-sensor fusion (counter-UAS and embodied-agent perception).
#
# The default build is PURE and light: galadriel-core (the cheap NIS chi-squared
# baseline) + galadriel-sim (synthetic scenarios) + galadriel-cli (the demo).
# For the default-member CLI build, the additive `pid`, `ncp`, and `ncp-live`
# features opt into pid-core, ncp-core, and ncp-zenoh/Zenoh/Tokio respectively.
# Direct builds of the adapter, evaluation, or justification workspace members
# resolve the dependencies declared by those members without going through CLI features.
[workspace]
resolver = "2"
members = [
    "crates/galadriel-core",
    "crates/galadriel-sim",
    "crates/galadriel-cli",
    "crates/galadriel-pid",
    "crates/galadriel-ncp",
    "crates/galadriel-eval",
    "crates/galadriel-justify",
]
# The default build (`cargo build` / `cargo test` with no args) stays PURE — it
# excludes galadriel-pid, which pulls the heavier pid-core. Build/test it with
# `-p galadriel-pid`, `--workspace`, or via the cli `pid` feature.
default-members = [
    "crates/galadriel-core",
    "crates/galadriel-sim",
    "crates/galadriel-cli",
]

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Sepehr Mahmoudian"]
repository = "https://github.com/sepahead/galadriel"
homepage = "https://github.com/sepahead/galadriel"
description = "Galadriel's Mirror — a fail-closed cross-sensor statistical-consistency monitor for multi-sensor fusion."
keywords = ["security", "sensor-fusion", "anomaly-detection", "counter-uas", "information-theory"]
categories = ["science", "algorithms"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
statrs = { version = "0.18", default-features = false }
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
zenoh = { version = "=1.9.0", default-features = false }
galadriel-core = { version = "0.9.0", path = "crates/galadriel-core" }
galadriel-sim = { version = "0.9.0", path = "crates/galadriel-sim" }
galadriel-pid = { version = "0.9.0", path = "crates/galadriel-pid" }
galadriel-ncp = { version = "0.9.0", path = "crates/galadriel-ncp" }
# Public sibling ecosystem crates pinned to immutable commits. pid-rs currently
# declares 1.0.0 on main without a v1 tag or published artifact; this revision
# includes that version-declaration commit plus its same-day correctness/CI
# follow-ups. Galadriel opts into the
# explicitly experimental continuous/pipeline surface used by its advisory PID path.
pid-core = { version = "1.0.0", git = "https://github.com/sepahead/pid-rs", rev = "1cd2424f7967e1752dcc8e53859e8fdad3566f51", features = ["experimental-pipelines"] }
ncp-core = { version = "0.8.0", git = "https://github.com/sepahead/NCP", rev = "2f5bd586d4bb20c90362bb6f5698b7f64057ba4e" } # v0.8.0
ncp-zenoh = { version = "0.8.0", git = "https://github.com/sepahead/NCP", rev = "2f5bd586d4bb20c90362bb6f5698b7f64057ba4e" } # v0.8.0

[profile.release]
lto = "thin"
