# Galadriel's Mirror is a fail-closed cross-sensor consistency monitor.
# It supports multisensor fusion research for counter-unmanned aircraft systems
# (counter-UAS) and embodied-agent perception.
#
# The default build is pure and small.
# It includes galadriel-core, galadriel-sim, and galadriel-cli.
# The default-member command-line interface (CLI) build has three additive features.
# The `pid` feature selects pid-core.
# The `ncp` feature selects ncp-core.
# The `ncp-live` feature selects ncp-zenoh, Zenoh, and Tokio.
# Direct workspace-member builds resolve their declared dependencies.
[workspace]
resolver = "2"
members = [
    "crates/galadriel-core",
    "crates/galadriel-sim",
    "crates/galadriel-cli",
    "crates/galadriel-pid",
    "crates/galadriel-ncp",
    "crates/galadriel-eval",
    "crates/galadriel-justify",
]
# The default build excludes galadriel-pid and its heavier pid-core dependency.
# Select galadriel-pid with `-p galadriel-pid` or `--workspace`.
# The CLI `pid` feature also selects galadriel-pid.
default-members = [
    "crates/galadriel-core",
    "crates/galadriel-sim",
    "crates/galadriel-cli",
]

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Sepehr Mahmoudian"]
repository = "https://github.com/sepahead/galadriel"
homepage = "https://github.com/sepahead/galadriel"
description = "A fail-closed cross-sensor statistical consistency monitor for multisensor fusion."
keywords = ["security", "sensor-fusion", "anomaly-detection", "counter-uas", "information-theory"]
categories = ["science", "algorithms"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
statrs = { version = "0.19", default-features = false }
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
zenoh = { version = "=1.9.0", default-features = false }
galadriel-core = { version = "0.9.0", path = "crates/galadriel-core" }
galadriel-sim = { version = "0.9.0", path = "crates/galadriel-sim" }
galadriel-pid = { version = "0.9.0", path = "crates/galadriel-pid" }
galadriel-ncp = { version = "0.9.0", path = "crates/galadriel-ncp" }
# Public sibling ecosystem crates use immutable commits.
# pid-rs declares version 1.0.0 on main.
# It has no public v1 tag or published artifact.
# The selected revision includes the version declaration and same-day corrections.
# It also includes the same-day continuous integration changes.
# Galadriel selects the experimental continuous pipeline for its advisory
# partial information decomposition (PID) path.
pid-core = { version = "1.0.0", git = "https://github.com/sepahead/pid-rs", rev = "1cd2424f7967e1752dcc8e53859e8fdad3566f51", features = ["experimental-pipelines"] }
ncp-core = { version = "0.8.0", git = "https://github.com/sepahead/NCP", rev = "2f5bd586d4bb20c90362bb6f5698b7f64057ba4e" } # v0.8.0
ncp-zenoh = { version = "0.8.0", git = "https://github.com/sepahead/NCP", rev = "2f5bd586d4bb20c90362bb6f5698b7f64057ba4e" } # v0.8.0

[profile.release]
lto = "thin"
