[package]
name = "galadriel-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line demo and driver for Galadriel's Mirror."

[[bin]]
name = "galadriel"
path = "src/main.rs"

[dependencies]
galadriel-core = { workspace = true }
galadriel-sim = { workspace = true }
galadriel-pid = { workspace = true, optional = true }
clap = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
# The cross-sensor PID engine (pulls pid-core). Demo: `cargo run --features pid -- demo`.
pid = ["dep:galadriel-pid"]
