[package]
name = "galadriel-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A demonstration, replay, and fail-closed observer for Galadriel's Mirror."
publish = false

[lints]
workspace = true

[[bin]]
name = "galadriel"
path = "src/main.rs"

[dependencies]
galadriel-core = { workspace = true }
galadriel-sim = { workspace = true }
galadriel-pid = { workspace = true, optional = true }
galadriel-ncp = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "signal", "time"] }
clap = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
# This feature selects the cross-sensor PID engine and pid-core.
# Demonstration command: `cargo run --features pid -- demo`.
pid = ["dep:galadriel-pid"]
# This feature selects NCP sidecar ingestion and ncp-core.
# It adds `replay <jsonl>`.
ncp = ["dep:galadriel-ncp"]
# The operational two-route Zenoh receiver and process runtime.
ncp-live = ["ncp", "galadriel-ncp/zenoh", "dep:tokio"]
