[package]
name = "galadriel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and the NIS chi-squared baseline detector for Galadriel's Mirror."
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
statrs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1"
