[package]
name = "galadriel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and a normalized innovation squared baseline detector."
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
statrs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1"
