[package]
name = "galadriel-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Monte-Carlo evaluation harness: the PID engine vs the NIS baseline across attack types."
publish = false

[lints]
workspace = true

[[bin]]
name = "galadriel-eval"
path = "src/main.rs"

[[bin]]
name = "galadriel-evidence"
path = "src/evidence_main.rs"

[[bench]]
name = "detectors"
harness = false

[dependencies]
galadriel-core = { workspace = true }
galadriel-sim = { workspace = true }
galadriel-pid = { workspace = true }
galadriel-ncp = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
statrs = { workspace = true }

[dev-dependencies]
# Lean criterion: keep the statistical harness, drop the plotters/rayon extras so
# `cargo bench` stays quick to build.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"
