[package]
name = "galadriel-justify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A comparison of partial information decomposition, mutual information, and Pearson correlation."
publish = false

[lints]
workspace = true

[[bin]]
name = "galadriel-justify"
path = "src/main.rs"

[dependencies]
galadriel-core = { workspace = true }
pid-core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
