[package]
name = "galadriel-ncp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Versioned NCP sidecar ingest for Galadriel's Mirror (feature `ncp`)."
publish = false

[lints]
workspace = true

[dependencies]
galadriel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# ncp-core is light (serde + serde_json only); the workspace root pins the exact
# commit selected by the public annotated NCP v0.8.0 tag.
ncp-core = { workspace = true }
# The live named-perception tap (feature `zenoh`) pulls the full Zenoh + tokio stack;
# the JSONL ingest path needs none of it, so it is strictly optional.
ncp-zenoh = { workspace = true, optional = true }
# Retain exact raw subscriber guards so each live receiver can undeclare only its
# own selector without broad-closing a host-owned NCP session.
zenoh = { workspace = true, optional = true }
# Used directly for bounded live handoffs and the fail-stop monitor receiver;
# do not rely on ncp-zenoh's transitive runtime dependency. The live monitor gap
# deadline owns one cancellation-aware timer task per exact epoch subscription.
tokio = { workspace = true, optional = true, features = ["macros", "rt", "time"] }

[dev-dependencies]
# Live integration tests drive real in-process Zenoh round trips and need a
# multi-thread runtime; the feature-gated library needs only sync, timers, macros,
# and the current-thread runtime for its cancellation-aware gap worker.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
# The live Zenoh named-perception tap. Off by default — only `ncp-live` enables it.
zenoh = ["dep:ncp-zenoh", "dep:tokio", "dep:zenoh"]

# The live-leg e2e test compiles only when the `zenoh` feature is enabled
# (it needs ncp-zenoh and the optional tokio dependency in the lib itself).
[[test]]
name = "live_zenoh_e2e"
required-features = ["zenoh"]

[[test]]
name = "monitor_live_zenoh_e2e"
required-features = ["zenoh"]

[[test]]
name = "operational_live_zenoh_e2e"
required-features = ["zenoh"]

[[test]]
name = "secure_deployment_configs"
required-features = ["zenoh"]
