[package]
name = "galadriel-ncp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Galadriel sidecar ingestion through the command-line interface `ncp` feature and Neuro-Cybernetic Protocol (NCP) wire 0.8 addressing."
publish = false

[lints]
workspace = true

[dependencies]
galadriel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# ncp-core uses only serde and serde_json.
# The workspace root pins the commit for the annotated NCP v0.8.0 tag.
ncp-core = { workspace = true }
# The live named-perception tap uses the `zenoh` feature.
# This feature selects the complete Zenoh and Tokio stack.
# The JavaScript Object Notation Lines (JSONL) ingestion path does not need this stack.
ncp-zenoh = { workspace = true, optional = true }
# Retain exact raw subscriber guards so each live receiver can undeclare only its
# own selector without broad-closing a host-owned NCP session.
zenoh = { workspace = true, optional = true }
# Galadriel uses Tokio directly for bounded live handoffs.
# The fail-stop monitor receiver also uses Tokio directly.
# Do not rely on the transitive Tokio dependency from ncp-zenoh.
# Each exact epoch subscription owns one cancellation-aware gap timer task.
tokio = { workspace = true, optional = true, features = ["macros", "rt", "time"] }

[dev-dependencies]
# Live integration tests use real in-process Zenoh round trips.
# These tests need a multithreaded runtime.
# The feature-gated library uses synchronization, timers, macros, and the current-thread runtime.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
# The live Zenoh named-perception tap is off by default.
# The command-line interface (CLI) `ncp-live` feature forwards it.
# A direct galadriel-ncp build can also select it.
zenoh = ["dep:ncp-zenoh", "dep:tokio", "dep:zenoh"]

# The live end-to-end test needs the `zenoh` feature.
# It also needs ncp-zenoh and the optional library Tokio dependency.
[[test]]
name = "live_zenoh_e2e"
required-features = ["zenoh"]

[[test]]
name = "monitor_live_zenoh_e2e"
required-features = ["zenoh"]

[[test]]
name = "operational_live_zenoh_e2e"
required-features = ["zenoh"]

[[test]]
name = "secure_deployment_configs"
required-features = ["zenoh"]
