[package]
name = "galadriel-pid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The cross-sensor Partial Information Decomposition engine for Galadriel's Mirror (feature `pid`)."
publish = false

[lints]
workspace = true

[dependencies]
galadriel-core = { workspace = true }
# pid-core is pinned to the exact public 1.0.0 main revision in the workspace root.
pid-core = { workspace = true }

[dev-dependencies]
galadriel-sim = { workspace = true }
serde_json = { workspace = true }
