[package]
name = "galadriel-pid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The opt-in Partial Information Decomposition engine reached through galadriel-cli's `pid` feature."
publish = false

[lints]
workspace = true

[dependencies]
galadriel-core = { workspace = true }
# pid-core is pinned to the exact public revision whose manifest declares 1.0.0;
# no public v1 tag or published 1.x artifact is claimed here.
pid-core = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
galadriel-sim = { workspace = true }
serde_json = { workspace = true }
