[package]
name = "galadriel-pid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optional partial information decomposition through the CLI `pid` feature."
publish = false

[lints]
workspace = true

[dependencies]
galadriel-core = { workspace = true }
# pid-core uses the exact public revision whose manifest declares version 1.0.0.
# This repository does not claim a public v1 tag or published 1.x artifact.
pid-core = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
galadriel-sim = { workspace = true }
serde_json = { workspace = true }
