[package]
name = "galadriel-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Synthetic multi-sensor scenarios and an injection library for exercising Galadriel's Mirror."

[dependencies]
galadriel-core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
