[package]
name = "galadriel-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Synthetic multisensor scenarios and an injection library for Galadriel's Mirror."
publish = false

[lints]
workspace = true

[dependencies]
galadriel-core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
